[package]
name = "vex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
clap = { version = "4.4.11", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.24.0"
ron = "0.8.1"
serde = { version = "1.0.193", features = ["derive"] }
